# riscv-simulator

./: .gitignore  README.md  meson.build  rv32i.json
include/: instruction_formatter.h  instruction_set.h  riscv_core.h
include/extensions/: rv32i.h
include/memory/: elf_reader.h  memory_map.h
src/: instruction_formatter.cpp  instruction_set.cpp  main.cpp  riscv_core.cpp
src/extensions/: rv32i.cpp
src/memory/: elf_reader.cpp  memory_map.cpp
test/: Makefile  bios.s  c_test.c  c_test.elf  data.s  link.ld
